--- a/config.json
+++ b/config.json
@@ -8,7 +8,7 @@
     "realname":       "Prototype Bot",
     "username":       "",
     "servername":     "vps3",
-    "hostname":       "wolfy1339",
+    "hostname":       "wolfy1339"
   },
   "logdir":           "logs"
 }
