--- a/config.json
+++ b/config.json
@@ -13,14 +13,14 @@
     "logdir":           "logs",
     "irc": {
         "userName": "topicsed",
-        "password": '................',
-        "realName": 'topicsed bot by Fusl',
+        "password": "................",
+        "realName": "topicsed bot by Fusl",
         "port": 6667,
         "debug": true,
         "showErrors": false,
         "autoRejoin": true,
         "autoConnect": true,
-        "channels": ['##wolfy1339'],
+        "channels": ["##wolfy1339"],
         "secure": false,
         "selfSigned": false,
         "certExpired": false,
